[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/topoboss.png" type="Texture" id=1]
[ext_resource path="res://topo.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 107.859

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61.9973, 72.3645 )

[node name="topo" type="KinematicBody2D"]
position = Vector2( 725.11, 359.188 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 3 )

[node name="balas" type="Position2D" parent="."]

[node name="vuelta" type="RayCast2D" parent="."]
position = Vector2( 1, -81 )
rotation = -3.14159

[node name="vuelta2" type="RayCast2D" parent="."]
position = Vector2( 12, 93 )
enabled = true
collision_mask = 9

[node name="ataques1" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ataques2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="stun" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="ataques1" to="." method="_on_ataques1_timeout"]
[connection signal="timeout" from="ataques2" to="." method="_on_ataques2_timeout"]
[connection signal="timeout" from="stun" to="." method="_on_stun_timeout"]
